<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage"
    tools:context=".ui.login.Login">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"

        android:background="@drawable/button_rounded"
        android:fontFamily="@font/allerta"
        android:text="@string/login"
        android:textColor="#F8F1F1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:allowUndo="true"
        android:background="@drawable/button_login"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#F8F1F1"
        android:textColorHint="#F8F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:allowUndo="true"
        android:background="@drawable/button_login"
        android:ems="10"
        android:fontFamily="@font/allerta"

        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#F8F1F1"
        android:textColorHint="#F8F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="233dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/allerta"
        android:text="@string/welcome1"
        android:textColor="#F8F1F1"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_register"
        android:fontFamily="@font/allerta"
        android:text="Forgot Password?"
        android:textColor="#F8F1F1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/login_regbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_register"
        android:fontFamily="@font/allerta"
        android:text="Register"

        android:textColor="#F8F1F1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>